Fixed overflow issues from middle row

--- a/app/styles/trader/trader-orders-sell.less
+++ b/app/styles/trader/trader-orders-sell.less
@@ -28,6 +28,8 @@
 trader-orders-sell {
   .widget();
   .list();
+  box-sizing: border-box;
+  min-width: 280px;
   display: flex;
   .layout-column {
     height: inherit !important;
